Added: isFavorite, totalComments on index sermons.
